# heroku-rust-template

./: .dockerignore  .gitignore  .slugignore  Cargo.toml  README.md
frontend/: esbuild.js
frontend/public/: bundle.js.map
rust-server/: .env  Cargo.toml
rust-server/core/: Cargo.toml
rust-server/core/src/api/basic_actions/: create.rs  delete.rs  get.rs  update.rs
rust-server/data-access-layer/: Cargo.toml
rust-server/data-access-layer/migrations/: 20240628025045_adding-user-connection.sql
rust-server/data-access-layer/src/: json_file.rs
rust-server/data-access-layer/src/to_do_items/: schema.rs
rust-server/data-access-layer/src/to_do_items/transactions/: create.rs  delete.rs  get.rs  update.rs
rust-server/networking/actix-server/: Cargo.toml  index.html
rust-server/networking/actix-server/src/: main.rs
rust-server/networking/actix-server/src/api/basic_actions/: create.rs  mod.rs
rust-server/networking/hyper-server/: Cargo.toml
rust-server/scripts/: run_server.sh
